# gamevote-ui/src/generated-api/api/models/ModelsDrinkType.ts
@@ -1,105 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * GameVote API
- * API for the GameVote application to manage parties, polls, and votes.
- *
- * The version of the OpenAPI document: 1.0
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-import { mapValues } from '../runtime';
-/**
- * 
- * @export
- * @interface ModelsDrinkType
- */
-export interface ModelsDrinkType {
-    /**
-     * Percentage, e.g., 5.0 for 5%
-     * @type {number}
-     * @memberof ModelsDrinkType
-     */
-    alcoholPercent?: number;
-    /**
-     * How many beers this equates to
-     * @type {number}
-     * @memberof ModelsDrinkType
-     */
-    beerEquivalent?: number;
-    /**
-     * 
-     * @type {string}
-     * @memberof ModelsDrinkType
-     */
-    id?: string;
-    /**
-     * 
-     * @type {string}
-     * @memberof ModelsDrinkType
-     */
-    name?: string;
-    /**
-     * e.g. "Halber Liter", "Shot", "Achtel"
-     * @type {string}
-     * @memberof ModelsDrinkType
-     */
-    unitName?: string;
-    /**
-     * 
-     * @type {number}
-     * @memberof ModelsDrinkType
-     */
-    volumeMl?: number;
-}
-
-/**
- * Check if a given object implements the ModelsDrinkType interface.
- */
-export function instanceOfModelsDrinkType(value: object): value is ModelsDrinkType {
-    return true;
-}
-
-export function ModelsDrinkTypeFromJSON(json: any): ModelsDrinkType {
-    return ModelsDrinkTypeFromJSONTyped(json, false);
-}
-
-export function ModelsDrinkTypeFromJSONTyped(json: any, ignoreDiscriminator: boolean): ModelsDrinkType {
-    if (json == null) {
-        return json;
-    }
-    return {
-        
-        'alcoholPercent': json['alcoholPercent'] == null ? undefined : json['alcoholPercent'],
-        'beerEquivalent': json['beerEquivalent'] == null ? undefined : json['beerEquivalent'],
-        'id': json['id'] == null ? undefined : json['id'],
-        'name': json['name'] == null ? undefined : json['name'],
-        'unitName': json['unitName'] == null ? undefined : json['unitName'],
-        'volumeMl': json['volumeMl'] == null ? undefined : json['volumeMl'],
-    };
-}
-
-export function ModelsDrinkTypeToJSON(json: any): ModelsDrinkType {
-    return ModelsDrinkTypeToJSONTyped(json, false);
-}
-
-export function ModelsDrinkTypeToJSONTyped(value?: ModelsDrinkType | null, ignoreDiscriminator: boolean = false): any {
-    if (value == null) {
-        return value;
-    }
-
-    return {
-        
-        'alcoholPercent': value['alcoholPercent'],
-        'beerEquivalent': value['beerEquivalent'],
-        'id': value['id'],
-        'name': value['name'],
-        'unitName': value['unitName'],
-        'volumeMl': value['volumeMl'],
-    };
-}
-
