# gamevote-ui/src/generated-api/api/models/ModelsPartyOption.ts
@@ -1,81 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * GameVote API
- * API for the GameVote application to manage parties, polls, and votes.
- *
- * The version of the OpenAPI document: 1.0
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-import { mapValues } from '../runtime';
-/**
- * 
- * @export
- * @interface ModelsPartyOption
- */
-export interface ModelsPartyOption {
-    /**
-     * 
-     * @type {number}
-     * @memberof ModelsPartyOption
-     */
-    appId?: number;
-    /**
-     * 
-     * @type {string}
-     * @memberof ModelsPartyOption
-     */
-    imageUrl?: string;
-    /**
-     * 
-     * @type {string}
-     * @memberof ModelsPartyOption
-     */
-    name?: string;
-}
-
-/**
- * Check if a given object implements the ModelsPartyOption interface.
- */
-export function instanceOfModelsPartyOption(value: object): value is ModelsPartyOption {
-    return true;
-}
-
-export function ModelsPartyOptionFromJSON(json: any): ModelsPartyOption {
-    return ModelsPartyOptionFromJSONTyped(json, false);
-}
-
-export function ModelsPartyOptionFromJSONTyped(json: any, ignoreDiscriminator: boolean): ModelsPartyOption {
-    if (json == null) {
-        return json;
-    }
-    return {
-        
-        'appId': json['appId'] == null ? undefined : json['appId'],
-        'imageUrl': json['imageUrl'] == null ? undefined : json['imageUrl'],
-        'name': json['name'] == null ? undefined : json['name'],
-    };
-}
-
-export function ModelsPartyOptionToJSON(json: any): ModelsPartyOption {
-    return ModelsPartyOptionToJSONTyped(json, false);
-}
-
-export function ModelsPartyOptionToJSONTyped(value?: ModelsPartyOption | null, ignoreDiscriminator: boolean = false): any {
-    if (value == null) {
-        return value;
-    }
-
-    return {
-        
-        'appId': value['appId'],
-        'imageUrl': value['imageUrl'],
-        'name': value['name'],
-    };
-}
-
