# gamevote-ui/src/generated-api/api/models/ModelsPoll.ts
@@ -1,106 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * GameVote API
- * API for the GameVote application to manage parties, polls, and votes.
- *
- * The version of the OpenAPI document: 1.0
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-import { mapValues } from '../runtime';
-import type { ModelsPartyOption } from './ModelsPartyOption';
-import {
-    ModelsPartyOptionFromJSON,
-    ModelsPartyOptionFromJSONTyped,
-    ModelsPartyOptionToJSON,
-    ModelsPartyOptionToJSONTyped,
-} from './ModelsPartyOption';
-import type { ModelsPollStatus } from './ModelsPollStatus';
-import {
-    ModelsPollStatusFromJSON,
-    ModelsPollStatusFromJSONTyped,
-    ModelsPollStatusToJSON,
-    ModelsPollStatusToJSONTyped,
-} from './ModelsPollStatus';
-
-/**
- * 
- * @export
- * @interface ModelsPoll
- */
-export interface ModelsPoll {
-    /**
-     * 
-     * @type {Array<string>}
-     * @memberof ModelsPoll
-     */
-    attendees?: Array<string>;
-    /**
-     * 
-     * @type {string}
-     * @memberof ModelsPoll
-     */
-    id?: string;
-    /**
-     * 
-     * @type {Array<ModelsPartyOption>}
-     * @memberof ModelsPoll
-     */
-    options?: Array<ModelsPartyOption>;
-    /**
-     * 
-     * @type {ModelsPollStatus}
-     * @memberof ModelsPoll
-     */
-    status?: ModelsPollStatus;
-}
-
-
-
-/**
- * Check if a given object implements the ModelsPoll interface.
- */
-export function instanceOfModelsPoll(value: object): value is ModelsPoll {
-    return true;
-}
-
-export function ModelsPollFromJSON(json: any): ModelsPoll {
-    return ModelsPollFromJSONTyped(json, false);
-}
-
-export function ModelsPollFromJSONTyped(json: any, ignoreDiscriminator: boolean): ModelsPoll {
-    if (json == null) {
-        return json;
-    }
-    return {
-        
-        'attendees': json['attendees'] == null ? undefined : json['attendees'],
-        'id': json['id'] == null ? undefined : json['id'],
-        'options': json['options'] == null ? undefined : ((json['options'] as Array<any>).map(ModelsPartyOptionFromJSON)),
-        'status': json['status'] == null ? undefined : ModelsPollStatusFromJSON(json['status']),
-    };
-}
-
-export function ModelsPollToJSON(json: any): ModelsPoll {
-    return ModelsPollToJSONTyped(json, false);
-}
-
-export function ModelsPollToJSONTyped(value?: ModelsPoll | null, ignoreDiscriminator: boolean = false): any {
-    if (value == null) {
-        return value;
-    }
-
-    return {
-        
-        'attendees': value['attendees'],
-        'id': value['id'],
-        'options': value['options'] == null ? undefined : ((value['options'] as Array<any>).map(ModelsPartyOptionToJSON)),
-        'status': ModelsPollStatusToJSON(value['status']),
-    };
-}
-
