# gamevote-ui/src/generated-api/api/models/ServicePartyDTO.ts
@@ -1,144 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * GameVote API
- * API for the GameVote application to manage parties, polls, and votes.
- *
- * The version of the OpenAPI document: 1.0
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-import { mapValues } from '../runtime';
-import type { ModelsPartyOption } from './ModelsPartyOption';
-import {
-    ModelsPartyOptionFromJSON,
-    ModelsPartyOptionFromJSONTyped,
-    ModelsPartyOptionToJSON,
-    ModelsPartyOptionToJSONTyped,
-} from './ModelsPartyOption';
-import type { ServiceLink } from './ServiceLink';
-import {
-    ServiceLinkFromJSON,
-    ServiceLinkFromJSONTyped,
-    ServiceLinkToJSON,
-    ServiceLinkToJSONTyped,
-} from './ServiceLink';
-
-/**
- * 
- * @export
- * @interface ServicePartyDTO
- */
-export interface ServicePartyDTO {
-    /**
-     * 
-     * @type {{ [key: string]: ServiceLink; }}
-     * @memberof ServicePartyDTO
-     */
-    links?: { [key: string]: ServiceLink; };
-    /**
-     * 
-     * @type {Array<string>}
-     * @memberof ServicePartyDTO
-     */
-    attendees?: Array<string>;
-    /**
-     * 
-     * @type {number}
-     * @memberof ServicePartyDTO
-     */
-    beerCount?: number;
-    /**
-     * 
-     * @type {{ [key: string]: number; }}
-     * @memberof ServicePartyDTO
-     */
-    beerPerAttendee?: { [key: string]: number; };
-    /**
-     * 
-     * @type {string}
-     * @memberof ServicePartyDTO
-     */
-    code?: string;
-    /**
-     * 
-     * @type {string}
-     * @memberof ServicePartyDTO
-     */
-    id?: string;
-    /**
-     * 
-     * @type {Array<ModelsPartyOption>}
-     * @memberof ServicePartyDTO
-     */
-    options?: Array<ModelsPartyOption>;
-    /**
-     * 
-     * @type {{ [key: string]: number; }}
-     * @memberof ServicePartyDTO
-     */
-    results?: { [key: string]: number; };
-    /**
-     * 
-     * @type {string}
-     * @memberof ServicePartyDTO
-     */
-    status?: string;
-}
-
-/**
- * Check if a given object implements the ServicePartyDTO interface.
- */
-export function instanceOfServicePartyDTO(value: object): value is ServicePartyDTO {
-    return true;
-}
-
-export function ServicePartyDTOFromJSON(json: any): ServicePartyDTO {
-    return ServicePartyDTOFromJSONTyped(json, false);
-}
-
-export function ServicePartyDTOFromJSONTyped(json: any, ignoreDiscriminator: boolean): ServicePartyDTO {
-    if (json == null) {
-        return json;
-    }
-    return {
-        
-        'links': json['_links'] == null ? undefined : (mapValues(json['_links'], ServiceLinkFromJSON)),
-        'attendees': json['attendees'] == null ? undefined : json['attendees'],
-        'beerCount': json['beerCount'] == null ? undefined : json['beerCount'],
-        'beerPerAttendee': json['beerPerAttendee'] == null ? undefined : json['beerPerAttendee'],
-        'code': json['code'] == null ? undefined : json['code'],
-        'id': json['id'] == null ? undefined : json['id'],
-        'options': json['options'] == null ? undefined : ((json['options'] as Array<any>).map(ModelsPartyOptionFromJSON)),
-        'results': json['results'] == null ? undefined : json['results'],
-        'status': json['status'] == null ? undefined : json['status'],
-    };
-}
-
-export function ServicePartyDTOToJSON(json: any): ServicePartyDTO {
-    return ServicePartyDTOToJSONTyped(json, false);
-}
-
-export function ServicePartyDTOToJSONTyped(value?: ServicePartyDTO | null, ignoreDiscriminator: boolean = false): any {
-    if (value == null) {
-        return value;
-    }
-
-    return {
-        
-        '_links': value['links'] == null ? undefined : (mapValues(value['links'], ServiceLinkToJSON)),
-        'attendees': value['attendees'],
-        'beerCount': value['beerCount'],
-        'beerPerAttendee': value['beerPerAttendee'],
-        'code': value['code'],
-        'id': value['id'],
-        'options': value['options'] == null ? undefined : ((value['options'] as Array<any>).map(ModelsPartyOptionToJSON)),
-        'results': value['results'],
-        'status': value['status'],
-    };
-}
-
